not even gonna bother it's 3:08AM

--- a/app/views/markoverview.xml
+++ b/app/views/markoverview.xml
@@ -2,7 +2,10 @@
 	<Window id="markoverview" class="absolute">	
 		<View class="window_container">
 			
-			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1" />
+			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1">
+				<View id="header" />
+				<View id="remarks" />
+			</ScrollView>
 		
 		</View>
 	</Window>
