--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -14,7 +14,7 @@
   		</View>
   		
   		<View id="placeListContainer" class="fill_height" contentHeight="auto">
-  			<Label id="placeListTitle" width="100%" height="36" text="NEARBY PLACES" class="bg_dk_gray text_medium_medium white" /> 
+  			<Label id="placeListTitle" width="100%" text="NEARBY PLACES" class="bg_dk_gray text_medium_medium white" /> 
   			<TableView id="placeListTable" contentHeight="auto" width="100%" class="fill_height" />
   		</View>
 		
