--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="profile" class="abosolute">
+	<Window id="profile" class="absolute">
 		<View id="content" class="window_container bg_white">
 			<ScrollView id="scrollView" class="fill_width" />
 		</View>
