--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -12,6 +12,8 @@
 				<View id="headerContainer" />
 				<View id="basics" class="layout_vert"/>
         <View id="activity" class="layout_vert"/>
+        <View id="estimates" class="layout_vert"/>
+        <View id="estimates_buttons" class="layout_vert"/>
         <View id="remarks" class="layout_vert"/>
         <View id="features" class="layout_vert"/>						
 								
