fixed checkout client cleanup

--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -4,11 +4,11 @@
   	
   		<View id="outerMapContainer" class="absolute" height="100%" contentHeight="auto" width="100%">
   			
-  			<View id="mapHUD" backgroundColor='#333333' width="45%" top="40" zIndex="25" opacity="0.9" contentHeight="auto">
+  			<!-- <View id="mapHUD" backgroundColor='#333333' width="45%" top="40" zIndex="25" opacity="0" contentHeight="auto">
   				<Label id="geo_success" color='#ffffff'  text="Geo rec'd" class="text_small_light"/>
   				<Label id="geo_latlng" color='#ffffff'  text="lat/lng" class="text_small_light"/>
   				<Label id="mem_usage" color='#ffffff'  text="memory" class="text_small_light"/>
-  			</View>
+  			</View> -->
   			
   			<View id="mapContainer" class="fill_height absolute" top="0" contentHeight="auto" width="100%" />
   		</View>
