logging now enabled

--- a/app/views/testview.xml
+++ b/app/views/testview.xml
@@ -1,7 +1,7 @@
 <Alloy>
 	<Window id="testview" class="absolute">
 		<View id="content" class="window_container border_blu">
-			<ScrollView id="test_scrollview" class="fit_height fill_width border_red">
+			<!-- <ScrollView id="test_scrollview" class="fit_height fill_width border_red">
 				<Label id="menubar_debug" height="40" width="100%" class="border">
 						LOADING...
 					</Label>
@@ -27,7 +27,7 @@
 				<Button class="font_icon_sm" id="settingsBtn">Y</Button>
 				<Button class="font_icon_sm" id="flipToNext">p</Button>
 				
-			</ScrollView>
+			</ScrollView> -->
 		</View>
 	</Window>
 </Alloy>
