--- a/app/views/addpost.xml
+++ b/app/views/addpost.xml
@@ -2,7 +2,7 @@
 	<Window id="addpost" class="absolute">
 		<View id="content" class="window_container">
 		
-			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1" />
+			<ScrollView id="scrollView" class="fill_height bg_lt_blue" top="0" opacity="1" />
 				
 		</View>
 	</Window>
