--- a/app/views/help.xml
+++ b/app/views/help.xml
@@ -1,7 +1,7 @@
 <Alloy>
-	<Window id="help" class="abosolute">
-		<View id="content" class="window_container bg_white">
-			<ScrollView id="scrollView" class="fill_width bg_white" />
+	<Window id="help" class="absolute">
+		<View id="content" class="window_container bg_lt_gray">
+			<ScrollView id="scrollView" class="fill_width" />
 		</View>
 	</Window>
 </Alloy>
