--- a/app/views/register.xml
+++ b/app/views/register.xml
@@ -17,7 +17,7 @@
 <Alloy>
 	<Window id="register" class="abosolute">
 		<View id="content" class="window_container">
-			<ScrollView id="scrollView" class="fill_width fill_height" />
+			<ScrollView id="scrollView" class="fill_width fill_height bg_lt_blue" />
 		</View>
 	</Window>
 </Alloy>
