--- a/app/views/register2.xml
+++ b/app/views/register2.xml
@@ -18,7 +18,7 @@
 <Alloy>
 	<Window id="register2" class="abosolute">
 		<View id="content" class="window_container">
-			<ScrollView id="scrollView" class="fill_width fill_height" />
+			<ScrollView id="scrollView" class="fill_width fill_height bg_lt_blue" />
 		</View>
 	</Window>
 </Alloy>
