--- a/app/views/activityhistory.xml
+++ b/app/views/activityhistory.xml
@@ -2,7 +2,7 @@
 	<Window id="viewparkestimate" class="absolute">	
 		<View class="window_container">
 			
-			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1" />
+			<ScrollView id="scrollView" class="fill_height bg_lt_blue" top="0" opacity="1" />
 				
 		</View>
 	</Window>
